Fixed input margin spacing

--- a/The Expanse RPG (AGE System)/the-expanse-rpg-age-system.css
+++ b/The Expanse RPG (AGE System)/the-expanse-rpg-age-system.css
@@ -512,7 +512,7 @@ input {
 	text-align: center;
 }
 .sheet-shieldbonus-armorpenalty2 .sheet-maximum-input input {
-	padding-right: 1em;
+	margin-right: 0.75em;
 }
 .sheet-sectiononethird {
 		width:  calc(33.3% - 3.79px);
